<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nodomain.ivonne.snippet.espConfiguration.snippetEditActivity">

        <LinearLayout
            android:id="@+id/botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/button_cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="@dimen/altura_boton_con_margen"
                android:layout_weight="1"
                android:textSize="@dimen/texto_normal"
                android:text="@string/cancelar" />

            <View
                android:id="@+id/ViewColorPickerHelper"
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="@dimen/altura_boton_con_margen"
                android:layout_weight="1"
                android:text="@string/guardar"
                android:enabled="false"
                android:textSize="@dimen/texto_normal"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/botones"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margen_layout"
        android:layout_above="@id/botones">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/margen_layout">

            <Switch
                android:id="@+id/switch_auto_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margen_layout"
                android:textSize="@dimen/texto_chico"
                android:text="@string/apagado_automatico" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margen_chico_fijo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/esperar"
                    android:textSize="@dimen/texto_normal"
                    android:gravity="center_vertical"/>

                <com.nodomain.ivonne.snippet.adapters.horizontalNumberPicker
                    android:id="@+id/picker_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/minutos"
                    android:textSize="@dimen/texto_normal"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <Switch
                android:id="@+id/switch_auto_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encendido_automatico"
                android:textSize="@dimen/texto_chico"
                android:layout_marginTop="@dimen/margen_chico_fijo"/>

            <Button
                android:id="@+id/botonTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margen_chico_variable"
                android:gravity="center"
                android:layout_marginTop="@dimen/margen_chico_fijo"
                android:textSize="@dimen/texto_normal"
                android:text="@string/timer" />

            <CheckBox
                android:id="@+id/checkbox_advanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margen_chico_fijo"
                android:layout_marginBottom="@dimen/margen_chico_fijo"
                android:textSize="@dimen/texto_chico"
                android:text="@string/mostrar_avanzadas" />

            <LinearLayout
                android:id="@+id/layout_advanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margen_chico_fijo"
                android:visibility="gone">

                <View
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/margen_mediano_fijo"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize= "@dimen/texto_chico"
                    android:text="@string/networkName" />

                <EditText
                    android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/texto_normal"
                    android:inputType="textCapSentences" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/altura_cuadro"
                    android:layout_marginTop="@dimen/margen_chico_fijo"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image_device"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/borde_sombreado"
                        android:padding="@dimen/margen_chico_variable"
                        android:layout_marginBottom="@dimen/margen_chico_fijo"/>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="@dimen/icono_editar"
                        android:layout_height="@dimen/icono_editar"
                        android:layout_alignTop="@id/image_device"
                        android:layout_alignEnd="@id/image_device"
                        android:background="@drawable/borde_sombreado"
                        android:padding="@dimen/margen_chico_fijo"
                        app:srcCompat="@android:drawable/ic_menu_edit" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_marginTop="@dimen/margen_chico_fijo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/texto_chico"
                    android:text="@string/ambiente" />

                <Spinner
                    android:id="@+id/text_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/ambientes"
                    android:textSize="@dimen/texto_normal"
                    android:spinnerMode="dialog" />

                <TextView
                    android:layout_marginTop="@dimen/margen_chico_fijo"
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/texto_chico"
                    android:text="@string/contrasena2" />

                <EditText
                    android:id="@+id/text_psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="4"
                    android:hint="@string/hint_contrasena"
                    android:textSize="@dimen/texto_normal"
                    android:inputType="numberPassword" />

                <CheckBox
                    android:id="@+id/edit_psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/margen_layout"
                    android:textSize="@dimen/texto_chico"
                    android:text="@string/editar_contrasena" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
